# word_count

./: .gitignore  README.MD  blacklist.txt  data-out.html  pyproject.toml  word-count.py
src/: example.txt
templates/: base.html  content.html  content_singleton.html  title.html
templates/css/: main.css
templates/js/: index.js
word_count/: blacklist_utils.py  corpus_utils.py  data_utils.py  defaults.py  html_utils.py  nl_utils.py
