[tool.poetry]
name = "word_count"
version = "2.0.0"
description = ""
authors = ["Jaffar <jaffar.almaleki@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
Jinja2 = "^3.0.2"
nltk = "^3.6.5"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
